# chexus

./: CMakeLists.txt  basis.cpp  basis.h  bewertung.cpp  fen.cpp  intelligence.cpp  intelligence.h  io.cpp  main.cpp  nexus_test.cpp  nexus_test.h  spielfeld.cpp  spielfeld.h
visualize_tree/: VisualTree.py  requirements.txt
